<resources>
	<string name="app_name">DogApiTest</string>
    <string name="some_server_error">Some Server Error</string>
    <string name="try_connect_later">Try connect later</string>
    <string name="ok">Ok</string>
    <string name="share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="share_photo">Share photo</string>
    <string name="list">List</string>
    <string name="favourites">Favourites</string>
    <string name="dialog_title_stub">Server ERROR internet</string>
    <string name="back">back</string>
    <string name="breeds">Breeds</string>
    <string name="setFirstScreen">Breeds</string>
</resources>